force-app/main/default/objects/Customer__c/fields/Failed_Registration_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Failed_Registration_Resolution__c</fullName>
    <label>Failed Registration Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>