force-app/main/default/objects/Customer__c/fields/Free_philips_hue_white_starter_kit__c.field-meta.xml
<CustomField>
    <fullName>Free_philips_hue_white_starter_kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free philips hue white starter kit</label>
    <type>Checkbox</type>
</CustomField>