force-app/main/default/objects/Customer__c/fields/Full_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Service_Address__c</fullName>
    <formula>Service_Street_Number__c + &apos; &apos;+ Service_Street__c + &apos; &apos; + Service_Street_Suffix__c + &apos; &apos;+Service_Street_Misc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Service Address</label>
    <type>Text</type>
</CustomField>