force-app/main/default/objects/Customer__c/fields/Gas_Account__c.field-meta.xml
<CustomField>
    <fullName>Gas_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Gas Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gas Customers</relationshipLabel>
    <relationshipName>Customers3</relationshipName>
    <type>Lookup</type>
</CustomField>