force-app/main/default/objects/Customer__c/fields/Gas_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Gas_Account_Number__c</fullName>
    <label>Gas Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>