force-app/main/default/objects/Customer__c/fields/Gas_provider__c.field-meta.xml
<CustomField>
    <fullName>Gas_provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gas provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers (Account)</relationshipLabel>
    <relationshipName>Customers5</relationshipName>
    <type>Lookup</type>
</CustomField>