force-app/main/default/objects/Customer__c/fields/Gas_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Gas_Provider_Name__c</fullName>
    <label>Gas Provider Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVI</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>NWN</fullName>
            </value>
            <value>
                <fullName>IPL</fullName>
            </value>
            <value>
                <fullName>APCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>