force-app/main/default/objects/Customer__c/fields/Gas_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Gas_Rate_Code__c</fullName>
    <label>Gas Rate Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>