force-app/main/default/objects/Customer__c/fields/Has_the_Customer_enrolled__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Customer_enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has the Customer enrolled?</label>
    <type>Checkbox</type>
</CustomField>