force-app/main/default/objects/Customer__c/fields/HEAT_DD_DAYS__c.field-meta.xml
<CustomField>
    <fullName>HEAT_DD_DAYS__c</fullName>
    <label>HEAT DD DAYS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>