force-app/main/default/objects/Customer__c/fields/Heating_System_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Heating_System_Fuel_Type__c</fullName>
    <label>Heating System Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>