force-app/main/default/objects/Customer__c/fields/Heating_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Heating_System_Type__c</fullName>
    <label>Heating System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electric Furnace</fullName>
            </value>
            <value>
                <fullName>Electric Baseboards</fullName>
            </value>
            <value>
                <fullName>Air Source Heat Pump</fullName>
            </value>
            <value>
                <fullName>Ground Source Heat Pump</fullName>
            </value>
            <value>
                <fullName>Ductless Mini-Split Heat Pump</fullName>
            </value>
            <value>
                <fullName>Natural Gas Furnace</fullName>
            </value>
            <value>
                <fullName>Natural Gas Boiler</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>