force-app/main/default/objects/Customer__c/fields/Heating_Type__c.field-meta.xml
<CustomField>
    <fullName>Heating_Type__c</fullName>
    <label>Heating Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric forced air furnace</fullName>
            </value>
            <value>
                <fullName>Gas Furnace</fullName>
            </value>
            <value>
                <fullName>Heat Pump</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Electric Heat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>