force-app/main/default/objects/Customer__c/fields/Home_Size__c.field-meta.xml
<CustomField>
    <fullName>Home_Size__c</fullName>
    <label>Home Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>less than 1700 sq ft</fullName>
            </value>
            <value>
                <fullName>1701 to 5000 sq ft</fullName>
            </value>
            <value>
                <fullName>more than 5000 sq ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>