force-app/main/default/objects/Customer__c/fields/Home_Style__c.field-meta.xml
<CustomField>
    <fullName>Home_Style__c</fullName>
    <label>Home Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brownstone</fullName>
            </value>
            <value>
                <fullName>Cape</fullName>
            </value>
            <value>
                <fullName>Colonial</fullName>
            </value>
            <value>
                <fullName>Contemporary</fullName>
            </value>
            <value>
                <fullName>Gambrel</fullName>
            </value>
            <value>
                <fullName>Mansard</fullName>
            </value>
            <value>
                <fullName>Other Single Family</fullName>
            </value>
            <value>
                <fullName>Raised Ranch</fullName>
            </value>
            <value>
                <fullName>Ranch</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Victorian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>