force-app/main/default/objects/Customer__c/fields/Home_Type__c.field-meta.xml
<CustomField>
    <fullName>Home_Type__c</fullName>
    <label>Home Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manufactured Home</fullName>
            </value>
            <value>
                <fullName>Single-Family Home</fullName>
            </value>
            <value>
                <fullName>Multifamily (condo/townhouse, duplex, triplex, fourplex, high-rise, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>