force-app/main/default/objects/Customer__c/fields/Home_Type_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Home_Type_Coupon__c</fullName>
    <label>Home Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Duplex/Triplex</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>