force-app/main/default/objects/Customer__c/fields/Home_Type_ppl__c.field-meta.xml
<CustomField>
    <fullName>Home_Type_ppl__c</fullName>
    <label>Home Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Manufactured</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>