force-app/main/default/objects/Customer__c/fields/HOUSE_YEARBUILT__c.field-meta.xml
<CustomField>
    <fullName>HOUSE_YEARBUILT__c</fullName>
    <label>HOUSE YEARBUILT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>