force-app/main/default/objects/Customer__c/fields/Housing_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_Type__c</fullName>
    <label>Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single-Family</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>