force-app/main/default/objects/Customer__c/fields/How_did_you_hear_about_program__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_program__c</fullName>
    <label>How did you hear about program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Digital advertising</fullName>
            </value>
            <value>
                <fullName>In-store advertising</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>CenterPoint Energy</fullName>
            </value>
            <value>
                <fullName>Retail Electric Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>