force-app/main/default/objects/Customer__c/fields/How_did_you_hear_about_this_program__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_this_program__c</fullName>
    <label>How did you hear about this program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill Insert</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Internet/Online Ad</fullName>
            </value>
            <value>
                <fullName>Newspaper/Magazine Ad</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Previous audit</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Social Media (Facebook, etc.)</fullName>
            </value>
            <value>
                <fullName>State agency</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
            <value>
                <fullName>Outdoor Advertising (i.e. billboard)</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Real Estate Agent/Home Inspector</fullName>
            </value>
            <value>
                <fullName>CE Email</fullName>
            </value>
            <value>
                <fullName>Email from Utility</fullName>
            </value>
            <value>
                <fullName>Internet Search or Online Advertisement</fullName>
            </value>
            <value>
                <fullName>Utility representative</fullName>
            </value>
            <value>
                <fullName>Word-of-Mouth (family, friends, neighbors)</fullName>
            </value>
            <value>
                <fullName>Real Estate Agent</fullName>
            </value>
            <value>
                <fullName>Postcard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>