force-app/main/default/objects/Customer__c/fields/How_do_you_cool_your_home__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_cool_your_home__c</fullName>
    <label>How do you cool your home?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ductless Heat Pump (also called mini splits)</fullName>
            </value>
            <value>
                <fullName>Heat Pump</fullName>
            </value>
            <value>
                <fullName>Central A/C</fullName>
            </value>
            <value>
                <fullName>Window A/C</fullName>
            </value>
            <value>
                <fullName>Portable A/C</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>