force-app/main/default/objects/Customer__c/fields/How_do_you_heat_your_home__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_heat_your_home__c</fullName>
    <label>How do you heat your home?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electric Furnace</fullName>
            </value>
            <value>
                <fullName>Gas Furnace</fullName>
            </value>
            <value>
                <fullName>Heat Pump</fullName>
            </value>
            <value>
                <fullName>Other (propane, oil, wood, ductless heat pump, electric baseboard or cadet)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>