force-app/main/default/objects/Customer__c/fields/How_many_do_you_own__c.field-meta.xml
<CustomField>
    <fullName>How_many_do_you_own__c</fullName>
    <label>How many do you own?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>