force-app/main/default/objects/Customer__c/fields/How_many_thermostats_are_you_registering__c.field-meta.xml
<CustomField>
    <fullName>How_many_thermostats_are_you_registering__c</fullName>
    <label>How many thermostats are you registering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>