force-app/main/default/objects/Customer__c/fields/How_many_units__c.field-meta.xml
<CustomField>
    <fullName>How_many_units__c</fullName>
    <label>How many units?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single family</fullName>
            </value>
            <value>
                <fullName>2 units</fullName>
            </value>
            <value>
                <fullName>3 units</fullName>
            </value>
            <value>
                <fullName>4 units</fullName>
            </value>
            <value>
                <fullName>5+ units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>