force-app/main/default/objects/Customer__c/fields/HPC__c.field-meta.xml
<CustomField>
    <fullName>HPC__c</fullName>
    <label>HPC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>