force-app/main/default/objects/Customer__c/fields/I_heat_my_home_with__c.field-meta.xml
<CustomField>
    <fullName>I_heat_my_home_with__c</fullName>
    <label>I heat my home with</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>