force-app/main/default/objects/Customer__c/fields/INACTIVE_DATE__c.field-meta.xml
<CustomField>
    <fullName>INACTIVE_DATE__c</fullName>
    <label>INACTIVE DATE</label>
    <type>Date</type>
</CustomField>