force-app/main/default/objects/Customer__c/fields/Incentive_Paid__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive Paid</label>
    <type>Checkbox</type>
</CustomField>