force-app/main/default/objects/Customer__c/fields/Installation_Street__c.field-meta.xml
<CustomField>
    <fullName>Installation_Street__c</fullName>
    <label>Installation Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>