force-app/main/default/objects/Customer__c/fields/Installation_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Installation_Zipcode__c</fullName>
    <label>Installation Zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>