force-app/main/default/objects/Customer__c/fields/Installed_within_the_next_30_days__c.field-meta.xml
<CustomField>
    <fullName>Installed_within_the_next_30_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installed within the next 30 days</label>
    <type>Checkbox</type>
</CustomField>