force-app/main/default/objects/Customer__c/fields/Ip_Address__c.field-meta.xml
<CustomField>
    <fullName>Ip_Address__c</fullName>
    <label>Ip Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>