force-app/main/default/objects/Customer__c/fields/IS_CANCELLATION__c.field-meta.xml
<CustomField>
    <fullName>IS_CANCELLATION__c</fullName>
    <label>IS CANCELLATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>