force-app/main/default/objects/Customer__c/fields/Is_Dataload__c.field-meta.xml
<CustomField>
    <fullName>Is_Dataload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dataload</label>
    <type>Checkbox</type>
</CustomField>