force-app/main/default/objects/Customer__c/fields/Is_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enrolled?</label>
    <type>Checkbox</type>
</CustomField>