force-app/main/default/objects/Customer__c/fields/IS_ESTIMATE__c.field-meta.xml
<CustomField>
    <fullName>IS_ESTIMATE__c</fullName>
    <label>IS ESTIMATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>