force-app/main/default/objects/Customer__c/fields/Is_HPWH__c.field-meta.xml
<CustomField>
    <fullName>Is_HPWH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is HPWH</label>
    <type>Checkbox</type>
</CustomField>