force-app/main/default/objects/Customer__c/fields/Is_your_service_address_different__c.field-meta.xml
<CustomField>
    <fullName>Is_your_service_address_different__c</fullName>
    <label>Is your service address different?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>