force-app/main/default/objects/Customer__c/fields/LANDLORD_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_ADDRESS__c</fullName>
    <label>Landlord Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>