force-app/main/default/objects/Customer__c/fields/LANDLORD_CITY2__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_CITY2__c</fullName>
    <label>LANDLORD_CITY2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>