force-app/main/default/objects/Customer__c/fields/LANDLORD_CITY__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_CITY__c</fullName>
    <label>Landlord City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>