force-app/main/default/objects/Customer__c/fields/Landlord_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_First_Name__c</fullName>
    <label>Landlord First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>