force-app/main/default/objects/Customer__c/fields/Landlord_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Usually Common Area Account</inlineHelpText>
    <label>Landlord Indicator</label>
    <type>Checkbox</type>
</CustomField>