force-app/main/default/objects/Customer__c/fields/Landlord_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Last_Name__c</fullName>
    <label>Landlord Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>