force-app/main/default/objects/Customer__c/fields/LANDLORD_NAME_FIRST__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_NAME_FIRST__c</fullName>
    <label>LANDLORD_NAME_FIRST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>