force-app/main/default/objects/Customer__c/fields/LANDLORD_NAME_LAST__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_NAME_LAST__c</fullName>
    <label>LANDLORD_NAME_LAST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>