force-app/main/default/objects/Customer__c/fields/LANDLORD_STATE__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_STATE__c</fullName>
    <label>Landlord State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>