force-app/main/default/objects/Customer__c/fields/LANDLORD_ZIP__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_ZIP__c</fullName>
    <label>Landlord Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>