force-app/main/default/objects/Customer__c/fields/Last_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Audit_Date__c</fullName>
    <label>Last Audit Date</label>
    <type>Date</type>
</CustomField>