force-app/main/default/objects/Customer__c/fields/Last_Audit_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Audit_Name__c</fullName>
    <label>Last Audit Name</label>
    <length>9</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>