force-app/main/default/objects/Customer__c/fields/Last_Service_type__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_type__c</fullName>
    <label>Last Service type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>