force-app/main/default/objects/Customer__c/fields/Legacy_DukeAccountManager__c.field-meta.xml
<CustomField>
    <fullName>Legacy_DukeAccountManager__c</fullName>
    <label>Legacy DukeAccountManager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>