force-app/main/default/objects/Customer__c/fields/Legacy_DukeAccountManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>Legacy_DukeAccountManagerEmail__c</fullName>
    <label>Legacy DukeAccountManagerEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>