force-app/main/default/objects/Customer__c/fields/Legacy_Facility_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Facility_Identifier__c</fullName>
    <label>Legacy Facility Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>