force-app/main/default/objects/Customer__c/fields/Legacy_FieldRepresentativeEmail__c.field-meta.xml
<CustomField>
    <fullName>Legacy_FieldRepresentativeEmail__c</fullName>
    <label>Legacy FieldRepresentativeEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>