force-app/main/default/objects/Customer__c/fields/Legacy_FieldRepresentativeTASR__c.field-meta.xml
<CustomField>
    <fullName>Legacy_FieldRepresentativeTASR__c</fullName>
    <label>Legacy FieldRepresentativeTASR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>