force-app/main/default/objects/Customer__c/fields/Legacy_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Last_Modified_Date__c</fullName>
    <label>Legacy Last Modified Date</label>
    <type>DateTime</type>
</CustomField>