force-app/main/default/objects/Customer__c/fields/Legacy_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Location_Id__c</fullName>
    <label>Legacy Location Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>