force-app/main/default/objects/Customer__c/fields/Legacy_TenantNumber__c.field-meta.xml
<CustomField>
    <fullName>Legacy_TenantNumber__c</fullName>
    <label>Legacy TenantNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>